# bachelor-project

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train.py  train2.py  train_grud.py
AutogluonModels/ag-20250908_185926/: learner.pkl
AutogluonModels/ag-20250908_190610/: learner.pkl
AutogluonModels/ag-20250908_190911/: learner.pkl
AutogluonModels/ag-20250908_195615/: learner.pkl
AutogluonModels/ag-20250909_061440/: learner.pkl
AutogluonModels/ag-20250909_062617/: learner.pkl
AutogluonModels/ag-20250909_062824/: learner.pkl
AutogluonModels/ag-20250909_063022/: learner.pkl
AutogluonModels/ag-20250909_071526/: learner.pkl  predictor.pkl
AutogluonModels/ag-20250909_071930/: learner.pkl  predictor.pkl
AutogluonModels/ag-20250909_074601/: learner.pkl
AutogluonModels/ag-20250909_074733/: learner.pkl  predictor.pkl
AutogluonModels/ag-20250909_075532/: learner.pkl
AutogluonModels/ag-20250909_084813/: learner.pkl  predictor.pkl
AutogluonModels/ag-20250909_085539/: learner.pkl  predictor.pkl
AutogluonModels/ag-20250909_131902/: learner.pkl
AutogluonModels/ag-20250909_132711/: learner.pkl  predictor.pkl
conf/: config.yaml
notebook/: aggregate_hourly.ipynb  aggregation_service.ipynb  analyze_dataset.ipynb  bilstm_model.ipynb  calculation_service.ipynb  lstm_model_check.ipynb  measurement_service.ipynb  model_service.ipynb  patch_model.ipynb  patch_model_check.ipynb  persistence_model.ipynb  prediction_flow.ipynb  prediction_service.ipynb  wind_station_service.ipynb  wind_turbines_service.ipynb
server/: app.py  asgi.py
(+336 files in other folders)
