[project]
name = "bachelor-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "psycopg[binary]>=3.2.9",
    "requests>=2.32.5",
    "sf-hamilton>=1.88.0",
    "sqlalchemy>=2.0.43",
]
