[project]
name = "bachelor-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "psycopg[binary]>=3.2.9",
    "requests>=2.32.5",
    "sf-hamilton>=1.88.0",
    "sqlalchemy>=2.0.43",
    "scikit-learn>=1.7.1",
    "lightgbm>=4.6.0",
    "torch>=2.4.0",
    "flask>=3.1.2",
    "uvicorn>=0.35.0",
]
